Added conference talk

--- a/_talks/2018-11-07-defense.md
+++ b/_talks/2018-11-07-defense.md
@@ -8,9 +8,9 @@ date: 2018-11-07
 location: "Tuscaloosa, Alabama"
 ---
 
-This talk was my Ph.D. dissertation defense titled, "Search for Signatures of Large Extra Dimensions in High-Mass Diphoton Events from Proton-Proton Collisions at $\sqrt{s} = 13$ TeV with CMS". This is based on my work as a graduate student at the University of Alabama.
+This talk was my Ph.D. dissertation defense titled, <i>"Search for Signatures of Large Extra Dimensions in High-Mass Diphoton Events from Proton-Proton Collisions at $\sqrt{s} = 13$ TeV with CMS"</i>. This is based on my work as a graduate student at the University of Alabama.
 
-Abstract: A search is performed for a nonresonant excess of high-mass diphoton events over the Standard Model background prediction. Such an excess could be a signature of new physics, such as from the existence of extra spatial dimensions in the universe. The sample of diphoton events were produced in proton-proton collisions using the Large Hadron Collider at a center-of-mass energy of 13 TeV. The data correspond to an integrated luminosity of 35.9 fb$^{−1}$ and were recorded in 2016 with the CMS detector. Compared to Standard Model background sources, the data are consistent with the background-only hypothesis and the results are interpreted in the context of the large extra-dimensional model of Arkani-Hamed, Dimopoulos, and Dvali. This result provides the best model limits from searches in the diphoton channel and is published in Ref. [1].
+<b>Abstract:</b> A search is performed for a nonresonant excess of high-mass diphoton events over the Standard Model background prediction. Such an excess could be a signature of new physics, such as from the existence of extra spatial dimensions in the universe. The sample of diphoton events were produced in proton-proton collisions using the Large Hadron Collider at a center-of-mass energy of 13 TeV. The data correspond to an integrated luminosity of 35.9 fb$^{−1}$ and were recorded in 2016 with the CMS detector. Compared to Standard Model background sources, the data are consistent with the background-only hypothesis and the results are interpreted in the context of the large extra-dimensional model of Arkani-Hamed, Dimopoulos, and Dvali. This result provides the best model limits from searches in the diphoton channel and is published in Ref. [1].
  
 [1] <b>CMS Collaboration,</b> "Search for physics beyond the standard model in high-mass diphoton events from proton-proton collisions at $\sqrt{s} = 13$ TeV", <i>Phys. Rev. D</i> <b>98</b> (2018), no. 9, 092001, [doi:10.1103/PhysRevD.98.092001](https://journals.aps.org/prd/abstract/10.1103/PhysRevD.98.092001), [arXiv:1809.00327](https://arxiv.org/abs/1809.00327)
 
