Added journal club talk

--- a/_talks/2018-11-07-defense.md
+++ b/_talks/2018-11-07-defense.md
@@ -1,7 +1,7 @@
 ---
 title: "Ph.D. Dissertation Defense"
 collection: talks
-type: "Talk"
+type: "Dissertation Defense"
 permalink: /talks/2018-11-07-defense
 venue: "Department of Physics and Astronomy, University of Alabama"
 date: 2018-11-07
